# STDA-SwiFT

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
ckpt/: pretrained.ckpt
examples/: export_encoder_state_dict.py  finetune_haxby.py  infer.py
stdaswift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stdaswift/models/: __init__.py  patchembedding.py  swin4d_transformer_ver8.py
stdaswift/utils/: io.py
