[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stdaswift"
version = "0.1.0"
description = "STDA-SwiFT: 4D Swin Transformer encoder release for fMRI"
authors = [{ name = "brian880825" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.1",
    "numpy>=1.23",
    "monai>=1.3",
    "nibabel>=5.1",
    "einops>=0.7",
]

[project.urls]
Homepage = "https://github.com/brian880825/STDA-SwiFT"

